--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "dev": "wepy build --watch",
-    "build": "cross-env NODE_ENV=production wepy build --no-cache",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cross-env NODE_ENV=production wepy build --no-cache"
   },
   "author": "",
   "license": "ISC",
@@ -30,8 +29,7 @@
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "2.0.1",
     "wepy-compiler-babel": "1.5.1",
-    "wepy-compiler-sass": "^1.3.7",
-    "wepy-compiler-scss": "1.3.10",
+    "wepy-compiler-sass": "1.3.7",
     "wepy-eslint": "1.5.2"
   }
 }
